[gd_scene load_steps=5 format=2]

[ext_resource path="res://assests/fonts/dodge_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://source/UI/HUD.gd" type="Script" id=2]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
layer = 2
script = ExtResource( 2 )

[node name="Score_label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0.423529, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.228
anchor_right = 1.0
anchor_bottom = 0.449
margin_left = 0.0799999
margin_top = -0.160004
margin_right = 2.0
margin_bottom = -0.280029
custom_colors/font_color_shadow = Color( 0.423529, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_constants/shadow_as_outline = 2
custom_fonts/font = ExtResource( 1 )
text = "Dogde The 
Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_but" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
hint_tooltip = "play the game"
custom_fonts/font = ExtResource( 1 )
shortcut = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="Start_but" to="." method="_on_Start_but_pressed"]
[connection signal="timeout" from="Message_timer" to="." method="_on_Message_timer_timeout"]
